--- a/carpool/templates/registration/login.html
+++ b/carpool/templates/registration/login.html
@@ -41,7 +41,7 @@
 			</form>
 			{{ error }}
 			<h5>Вы еще не зарегистрированы?
-				<a href="{% url 'new' %}">Регистрация</a>
+				<a href="{% url 'register' %}">Регистрация</a>
 			</h5>
 		</div>
 	</div>
