edit Profile, password_change_form

--- a/carpool/templates/index.html
+++ b/carpool/templates/index.html
@@ -48,7 +48,8 @@
 
           <div class="col-md-8 col-sm-8 col-xs-12">
             <div class="logo">
-              Автостопом до Кижинги
+              Автостопом до Кижинги. Привет, {{ user.first_name }}
+
             </div>
           </div><!-- end .col-sm-8 -->
 
